// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea default 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .c1 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 textarea {
  min-height: 6.25rem;
  width: 100%;
  resize: vertical;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea resizes with prop resize = false 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .c1 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 textarea {
  min-height: 6.25rem;
  width: 100%;
  resize: none;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea resizes with prop resize = none 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .c1 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 textarea {
  min-height: 6.25rem;
  width: 100%;
  resize: none;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea resizes with prop resize = true 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .c1 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 textarea {
  min-height: 6.25rem;
  width: 100%;
  resize: vertical;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea resizes with prop resize = vertical 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .c1 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 textarea {
  min-height: 6.25rem;
  width: 100%;
  resize: vertical;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea should accept disabled 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .c1 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 textarea {
  min-height: 6.25rem;
  width: 100%;
  resize: vertical;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  background: #F5F6F7;
  color: #939BA5;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 textarea:hover {
  border-color: #DEE1E5;
}

<div
  className="c0"
>
  <textarea
    disabled={true}
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea with an error validation 1`] = `
.c1 {
  color: #CC1F36;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 .c2 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 .c2 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .c2 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 textarea {
  min-height: 6.25rem;
  width: 100%;
  resize: vertical;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  border-color: #ED3B53;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 textarea:hover {
  border-color: #CC1F36;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

<div
  className="c0"
>
  <textarea
    aria-invalid="true"
    id="TextAreaID"
  />
  <div
    className="c1 c2 "
    color="palette.red500"
    size={20}
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Circle Info
      </title>
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`TextArea with placeholder 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .c1 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 textarea {
  min-height: 6.25rem;
  width: 100%;
  resize: vertical;
  border: solid 1px;
  width: 100%;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
    placeholder="this is a placeholder"
  />
</div>
`;
